--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page">
     <header>
         <nav>
-            <a href="/index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo">WebStudio</a>
 
             <ul class="site-nav list">
                 <li><a href="">Студия</a></li>
