--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <footer>   
         <div>
-            <a href=""> WebStudio</a>
+            <a href="" class="logo">WebStudio</a>
             <address>  
                 <ul class="list auth-nav">
                     <li class="par"> г. Киев, пр-т Леси Украинки, 26</li>
