--- a/portfolio.html
+++ b/portfolio.html
@@ -51,63 +51,63 @@
             <!-- 9 ссылок на проекты -->
             <ul class="project">
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img11.jpg" alt="веб сайт на ноутбуке" width="370">        
                         <h2 class="title">Технокряк</h2>    
                         <p class="p-card">Веб-сайт</p>  
                     </a>  
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img22.jpg" alt="баскетболисты борются за мяч" width="370">       
                         <h2 class="title">Постер New Orlean vs Golden Star</h2>    
                         <p class="p-card">Дизайн</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img33.jpg" alt="логотип рыбного ресторна" width="370">        
                         <h2 class="title">Ресторан Seafood</h2>    
                         <p class="p-card">Приложение</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img44.jpg" alt="наушники" width="370">       
                         <h2 class="title">Проект Prime</h2>    
                         <p class="p-card">Маркетинг</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img55.jpg" alt="коробки" width="370">        
                         <h2 class="title">Проект Boxes</h2>    
                         <p class="p-card">Приложение</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img66.jpg" alt="сайт на экране монитора" width="370">        
                         <h2 class="title">Inspiration has no Borders</h2>    
                         <p class="p-card">Веб-сайт</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img77.jpg" alt="открытая книга" width="370">        
                         <h2 class="title">Издание Limited Edition</h2>    
                         <p class="p-card">Дизайн</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img88.jpg" alt="логотип в виде бирки на одежде" width="370">        
                         <h2 class="title">Проект LAB</h2>    
                         <p class="p-card">Маркетинг</p>  
                     </a> 
                 </li>
                 <li class="list">
-                    <a href="">
+                    <a href="" class="list">
                         <img src="./images/img99.jpg" alt="человек печатает на ноутбуке" width="370">        
                         <h2 class="title">Growing Business</h2>    
                         <p class="p-card">Приложение</p>  
@@ -119,7 +119,7 @@
 
     <footer>   
         <div>
-            <a href=""> WebStudio</a>
+            <a href="" class="logo">WebStudio</a>
             <address>  
                 <ul class="list auth-nav">
                     <li class="par"> г. Киев, пр-т Леси Украинки, 26</li>
