--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body class="page">
     <header>
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo"><span class="logo-two">Web</span>Studio</a>
 
             <ul class="site-nav list">
                 <li><a href="">Студия</a></li>
@@ -119,7 +119,7 @@
 
     <footer>   
         <div>
-            <a href="" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo"><span class="logo-two">Web</span>Studio</a>
             <address>  
                 <ul class="list auth-nav">
                     <li class="par"> г. Киев, пр-т Леси Украинки, 26</li>
